--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
     <div class="content">
         <h1>PantyNectar</h1>
         <p>Discover the Best NSFW Content Online</p>
-        <a href="https://onlyfans.com/pantynectar" class="button">Hardcore Solo B/G Facials Creampies</a>
+        <a href="https://onlyfans.com/pantynectar" class="button">Hardcore B/G Solo Facials Creampies</a>
         <a href="https://fansly.com/pantynectar" class="button">Golden Showers</a>
     </div>
     <div class="iphone-overlay">
