--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="online-indicator"></div>
             <div class="online-text">Online Now!</div>
             <div class="profile-pic">
-                <img src="/Users/zane/site/pfp.jpg" alt="Profile Picture">
+                <img src="/pfp.jpg" alt="Profile Picture">
             </div>
         </a>
     </main>
