--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
             <h1>PantyNectar</h1>
             <p>Discover the Best NSFW Content Online</p>
             <a href="https://onlyfans.com/pantynectar" class="button">Hardcore B/G Solo Facials Creampies
-                <div class="tooltip">Dive into steamy hardcore creampie action!</div>
+                <div class="tooltip">Over 13,000 Hardcore Pics/Videos -- 5 full years of content!!!</div>
             </a>
             <a href="https://fansly.com/pantynectar" class="button">Golden Showers
-                <div class="tooltip">Get soaked with exclusive pee play fantasies!</div>
+                <div class="tooltip">Kinky Pee Vidoes </div>
             </a>
         </section>
 
@@ -41,7 +41,7 @@
             <div class="online-indicator"></div>
             <div class="online-text">Online Now!</div>
             <div class="profile-pic">
-                <img src="/pfp.jpg" alt="Profile Picture">
+                <img src="/Users/zane/site/pfp.jpg" alt="Profile Picture">
             </div>
         </a>
     </main>
