--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <div class="social-proof">Adored by Millions Worldwide!</div>
+        <div class="social-proof">Followed by Millions Worldwide!</div>
     </header>
 
     <main>
