--- a/index.html
+++ b/index.html
@@ -4,6 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PantyNectar | Exclusive NSFW Content</title>
+    
+    <!-- Open Graph Meta Tags (for Facebook, LinkedIn, etc.) -->
+    <meta property="og:title" content="PantyNectar | Exclusive NSFW Content">
+    <meta property="og:description" content="Discover the best NSFW content online - hardcore B/G, solo, facials, creampies, golden showers, and more! Over 13,000 pics/videos spanning 5 years.">
+    <meta property="og:url" content="https://pantynectar.com">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://pantynectar.com/preview-image.jpg">
+    <meta property="og:image:alt" content="PantyNectar Preview Image">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+
+   
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="PantyNectar | Exclusive NSFW Content">
+    <meta name="twitter:description" content="Explore 13,000+ hardcore pics/videos - B/G, solo, facials, creampies, and kinky golden showers!">
+    <meta name="twitter:image" content="https://pantynectar.com/preview-image.jpg">
+    <meta name="twitter:site" content="@pantynectar"> 
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
