--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
 
-   
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="PantyNectar | Exclusive NSFW Content">
     <meta name="twitter:description" content="Explore 13,000+ hardcore pics/videos - B/G, solo, facials, creampies, and kinky golden showers!">
@@ -44,7 +43,7 @@
                 <div class="tooltip">Over 13,000 Hardcore Pics/Videos -- 5 full years of content!!!</div>
             </a>
             <a href="https://fansly.com/pantynectar" class="button">Golden Showers
-                <div class="tooltip">Kinky Pee Vidoes </div>
+                <div class="tooltip">Kinky Pee Videos </div>
             </a>
         </section>
 
@@ -62,6 +61,12 @@
             </div>
         </a>
     </main>
+
+    <!-- Podcast Section (Below Main Content) -->
+    <section class="podcast">
+        <h2>PantyNectar Podcast</h2>
+        <div id="podcast-episodes"></div>
+    </section>
 
     <script src="script.js"></script>
 </body>
