--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
     <section class="podcast">
         <h2>PantyNectar Podcast</h2>
         <div id="podcast-episodes"></div>
+        <p>Listen to all episodes on <a href="https://sites.libsyn.com/482802" target="_blank">Libsyn</a>.</p>
     </section>
 
     <script src="script.js"></script>
