--- a/index.html
+++ b/index.html
@@ -62,11 +62,10 @@
         </a>
     </main>
 
-    <!-- Podcast Section (Below Main Content) -->
+    <!-- Podcast Section with Iframe (Below Main Content) -->
     <section class="podcast">
         <h2>PantyNectar Podcast</h2>
-        <div id="podcast-episodes"></div>
-        <p>Listen to all episodes on <a href="https://sites.libsyn.com/482802" target="_blank">Libsyn</a>.</p>
+        <iframe src="https://sites.libsyn.com/482802" style="width: 100%; height: 500px; border: none;" title="PantyNectar Podcast"></iframe>
     </section>
 
     <script src="script.js"></script>
