--- a/index.html
+++ b/index.html
@@ -62,10 +62,11 @@
         </a>
     </main>
 
-    <!-- Podcast Section with Iframe (Below Main Content) -->
+    <!-- Podcast Section with Link (Below Main Content) -->
     <section class="podcast">
         <h2>PantyNectar Podcast</h2>
-        <iframe src="https://sites.libsyn.com/482802" style="width: 100%; height: 500px; border: none;" title="PantyNectar Podcast"></iframe>
+        <p>Listen to my latest episodes on Libsyn!</p>
+        <a href="https://sites.libsyn.com/482802" target="_blank" class="podcast-button">Go to Podcast</a>
     </section>
 
     <script src="script.js"></script>
