--- a/index.html
+++ b/index.html
@@ -62,11 +62,10 @@
         </a>
     </main>
 
-    <!-- Podcast Section with Link (Below Main Content) -->
+    <!-- Podcast Section with Iframe (Below Main Content) -->
     <section class="podcast">
         <h2>PantyNectar Podcast</h2>
-        <p>Listen to my latest episodes on Libsyn!</p>
-        <a href="https://sites.libsyn.com/482802" target="_blank" class="podcast-button">Go to Podcast</a>
+        <iframe title="Embed Player" src="https://play.libsyn.com/embed/destination/id/4111161/height/192/theme/modern/size/large/thumbnail/yes/custom-color/a21059/hide-playlist/yes/hide-subscribe/yes/font-color/FFFFFF" height="192" width="100%" scrolling="no" allowfullscreen="" webkitallowfullscreen="true" mozallowfullscreen="true" oallowfullscreen="true" msallowfullscreen="true" style="border: none;"></iframe>
     </section>
 
     <script src="script.js"></script>
