--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 <body>
     <header>
-        <div class="social-proof">Followed by Millions Worldwide!</div>
+        <div class="social-proof">Welcome to My World</div>
     </header>
 
     <main>
