--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 <body>
     <header>
-        <div class="social-proof">Listen to Podcast Below ⬇️</div>
+        <div class="social-proof">Scroll ⬇️ for Latest PN Podcast</div>
     </header>
 
     <main>
