--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 </head>
 <body>
     <header>
-        <div class="social-proof">Latest PN Podcast👇</div>
+        <a href="#podcast-section" class="social-proof-link">
+            <div class="social-proof">Latest PN Podcast👇</div>
+        </a>
     </header>
 
     <main>
@@ -63,7 +65,7 @@
     </main>
 
     <!-- Podcast Section with Iframe (Below Main Content) -->
-    <section class="podcast">
+    <section id="podcast-section" class="podcast">
         <h2>PantyNectar Podcast</h2>
         <iframe title="Embed Player" src="https://play.libsyn.com/embed/destination/id/4111161/height/412/theme/modern/size/large/thumbnail/yes/custom-color/ad1939/playlist-height/200/direction/backward/hide-subscribe/yes/font-color/FFFFFF" height="412" width="100%" scrolling="no" allowfullscreen="" webkitallowfullscreen="true" mozallowfullscreen="true" oallowfullscreen="true" msallowfullscreen="true" style="border: none;"></iframe>
     </section>
